// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History panel should maintain order for newly entered result if existing values are same 1`] = `
.c2 {
  width: 200px;
  margin: 10px auto;
  border: 3px solid black;
  padding: 10px;
  text-align: center;
  font-size: 14pt;
  color: black;
  font-family: verdana;
  border-radius: 25px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c0 {
  color: red;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-flex: display;
  -ms-flex: display;
  flex: display;
  margin-left: 200px;
}

.c1 {
  font-size: 20px;
  font-family: verdana;
  color: black;
  text-align: center;
  margin-top: 45px;
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      History:
    </h2>
    <div>
      <div
        class="c2"
        data-testid="6*5 = 30#0"
      >
        6*5 = 30
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#1"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#2"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#3"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#4"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#5"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#6"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#7"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#8"
      >
        6*3 = 18
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#9"
      >
        6*3 = 18
      </div>
    </div>
  </div>
   
</div>
`;

exports[`History panel should render history panel with descending order of events 1`] = `
.c2 {
  width: 200px;
  margin: 10px auto;
  border: 3px solid black;
  padding: 10px;
  text-align: center;
  font-size: 14pt;
  color: black;
  font-family: verdana;
  border-radius: 25px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c0 {
  color: red;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-flex: display;
  -ms-flex: display;
  flex: display;
  margin-left: 200px;
}

.c1 {
  font-size: 20px;
  font-family: verdana;
  color: black;
  text-align: center;
  margin-top: 45px;
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      History:
    </h2>
    <div>
      <div
        class="c2"
        data-testid="1+4 = 5#0"
      >
        1+4 = 5
      </div>
      <div
        class="c2"
        data-testid="6*3 = 18#1"
      >
        6*3 = 18
      </div>
    </div>
  </div>
   
</div>
`;

exports[`History panel should render history panel with maximum of 10 records 1`] = `
.c2 {
  width: 200px;
  margin: 10px auto;
  border: 3px solid black;
  padding: 10px;
  text-align: center;
  font-size: 14pt;
  color: black;
  font-family: verdana;
  border-radius: 25px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c0 {
  color: red;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-flex: display;
  -ms-flex: display;
  flex: display;
  margin-left: 200px;
}

.c1 {
  font-size: 20px;
  font-family: verdana;
  color: black;
  text-align: center;
  margin-top: 45px;
}

<div>
  <div
    class="c0"
  >
    <h2
      class="c1"
    >
      History:
    </h2>
    <div>
      <div
        class="c2"
        data-testid="200*2 = 400#0"
      >
        200*2 = 400
      </div>
      <div
        class="c2"
        data-testid="4*6 = 18#1"
      >
        4*6 = 18
      </div>
      <div
        class="c2"
        data-testid="10+2 = 12#2"
      >
        10+2 = 12
      </div>
      <div
        class="c2"
        data-testid="54-32 = 22#3"
      >
        54-32 = 22
      </div>
      <div
        class="c2"
        data-testid="56*4 = 224#4"
      >
        56*4 = 224
      </div>
      <div
        class="c2"
        data-testid="7-3 = 4#5"
      >
        7-3 = 4
      </div>
      <div
        class="c2"
        data-testid="4/2 = 2#6"
      >
        4/2 = 2
      </div>
      <div
        class="c2"
        data-testid="9*7 = 63#7"
      >
        9*7 = 63
      </div>
      <div
        class="c2"
        data-testid="5-2 = 3#8"
      >
        5-2 = 3
      </div>
      <div
        class="c2"
        data-testid="1+4 = 5#9"
      >
        1+4 = 5
      </div>
    </div>
  </div>
   
</div>
`;
